fix code block overflow (correctly this time)

--- a/assets/css/chroma.css
+++ b/assets/css/chroma.css
@@ -453,7 +453,7 @@
   & code {
     display: block;
     overflow-x: auto;
-    max-width: calc(100vw - (theme(padding.4) * 2));
+    max-width: calc(100vw - (theme(padding.4) * 4));
   }
 }
 
